# ccl

./: .editorconfig  LICENSE  README.md  TODO
ccl/: ccl_bool.h  ccl_c_string_entry.h  ccl_defs.h  ccl_inline.h  ccl_likely.h  ccl_macro_utility.h  ccl_result.h  ccl_strdup.h  ccl_string.h  ccl_string_entry.h
ccl/hash/: ccl_cast_hash.h  ccl_djb2_hash.h  ccl_murmur_hash.h
ccl/template/: ccl_array.h  ccl_hash_map.h
ccl/template/private/: ccl_array_insert.h  ccl_hash_map_insert.h
tools/: CMakeLists.txt
tools/src/: CMakeLists.txt
tools/src/ccl-benchmark/: CMakeLists.txt  common.hpp  int_map_test.cpp  int_map_test.hpp  main.cpp  string_map_test.cpp  string_map_test.hpp
tools/src/ccl-test/: CMakeLists.txt  common.h  int_array_test.c  int_array_test.h  int_map_test.c  int_map_test.h  int_string_map_test.c  int_string_map_test.h  main.c  string_array_test.c  string_array_test.h  string_int_map_test.c  string_int_map_test.h  string_map_test.c  string_map_test.h
